--- a/html/index.htm
+++ b/html/index.htm
@@ -10,6 +10,8 @@
 		#navbar a { color: inherit; text-decoration: none; }
 		#main { background: #eee; position: relative; top: -40px; padding: 10px; padding-top: 40px; border: 1px solid #999; }
 		span.ingredient { width: 68px; height: 68px; display: inline-block; margin: 0px; margin-right: 10px; overflow: hidden; background: url('img/background.png') 0px 0px / 100% 100%; cursor: pointer; }
+		.ingredientpicker { border: 1px solid #888; padding: 3px; border-radius: 4px; }
+		.ingredientpicker:hover { border: 1px solid #aaa; }
 		.ingredientdropdown { position: absolute; left: 0px; top: 0px; display: block; background: rgba(150, 150, 150, 0.7); }
 		.ingredientdropdown ul { margin: 0px; padding: 0px; }
 		.ingredientdropdown li { padding-left: 0px; margin: 1px; list-style-type: none; cursor: pointer; border-radius: 4px; background: #ddd; background: linear-gradient(to bottom, #eeeeee 0%,#dddddd 8%,#dddddd 60%,#cccccc 85%); background: -moz-linear-gradient(to bottom, #eeeeee 0%,#dddddd 8%,#dddddd 60%,#cccccc 85%); background: -webkit-linear-gradient(to bottom, #eeeeee 0%,#dddddd 8%,#dddddd 60%,#cccccc 85%); }
@@ -36,20 +38,20 @@
 	</ul>
 	<div id="main">
 		<div id="simulator">
-			Add ingredients to see what they make.
-			<div id="ingredients"><input type="text" class="ingredientpicker" data-type="food" style="display: block"></input><span class="ingredient"></span><span class="ingredient"></span><span class="ingredient"></span><span class="ingredient"></span></div>
+			<div style="margin-bottom: 6pt">Add ingredients to see what they make.</div>
+			<div id="ingredients"><input type="text" class="ingredientpicker" data-type="food" style="display: block; width: 25%" placeholder="Choose an ingredient"></input><span class="ingredient"></span><span class="ingredient"></span><span class="ingredient"></span><span class="ingredient"></span></div>
 			<div id="results"></div>
 		</div>
 		<div id="discovery">
-			Add items in your inventory to see your options.
-			<div id="inventory"><input type="text" class="ingredientpicker" style="display: block"></input></div>
+			<div style="margin-bottom: 6pt">Add items in your inventory to see your options.</div>
+			<div id="inventory"><input type="text" class="ingredientpicker" style="display: block; width: 25%" placeholder="Choose an ingredient"></input></div>
 			<div id="discover"></div>
 		</div>
 		<div id="foodlist">
-			<table id="food"></table>
+			<div id="food"></div>
 		</div>
 		<div id="crockpot">
-			<table id="recipes"></table>
+			<div id="recipes"></div>
 		</div>
 		<div id="help">
 			<h2>General</h2>
