--- a/html/index.htm
+++ b/html/index.htm
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Don't Starve Food Guide</title>
 	<style type="text/css">
-		body { background: #ccc; width: 1000px; margin-left: auto; margin-right: auto; overflow: scroll; }
+		body { background: #ccc; width: 1000px; margin-left: auto; margin-right: auto; overflow: scroll; font-family: sans-serif; }
 		a { color: #333; }
 		#navbar { position: relative; left: 0px; top: 0px; display: block; z-index: 1; }
 		#navbar li { display: inline-block; list-style-type: none; padding-left: 0px; margin-left: 0px; border: 1px solid black; background: #ddd; cursor: pointer; margin-bottom: 8px; vertical-align: top; padding: 4px; }
@@ -54,8 +55,16 @@
 			<div id="recipes"></div>
 		</div>
 		<div id="help">
+			<h2>About This Food Guide</h2>
+			<p>
+				This is a tool to aid in not starving in <a href="http://www.dontstarvegame.com/">Don't Starve</a>,
+				an uncompromising wilderness survival game full of science and magic,
+				by <a href="http://kleientertainment.com/">Klei Entertainment</a>,
+				available on the <a href="https://chrome.google.com/webstore/detail/dont-starve/hiledapehlkhdehbhppgmekfalnlfajc">Chrome Web Store</a>
+				and <a href="http://store.steampowered.com/app/219740/">Steam</a>.
+			</p>
+			<p>The food and recipe database should be current as of the January 29th update.</p>
 			<h2>General</h2>
-			<p>This is a tool to aide in not starving in <a href="http://www.dontstarvegame.com/">Don't Starve</a>, an uncompromising wilderness survival game full of science and magic, by <a href="http://kleientertainment.com/">Klei Entertainment</a>, available on the <a href="https://chrome.google.com/webstore/detail/dont-starve/hiledapehlkhdehbhppgmekfalnlfajc">Chrome Web Store</a> and <a href="http://store.steampowered.com/app/219740/">Steam</a>.</p>
 			<p>
 				Perish time is the time before a food item becomes Rot. Halfway through this period, it will go stale, and give 50% health and 75% hunger.
 				Food spoils at three quarters of the way to Rot, giving only 50% hunger and no longer giving any health.
