Safari and Safari Mobile support
Added thin view checking for dropdown placement on mobile.

--- a/html/index.htm
+++ b/html/index.htm
@@ -7,10 +7,10 @@
 		a { color: #333; }
 		#navbar { position: relative; left: 0px; top: 0px; display: block; z-index: 1; }
 		#navbar li { display: inline-block; list-style-type: none; padding-left: 0px; margin-left: 0px; border: 1px solid black; background: #ddd; cursor: pointer; margin-bottom: 8px; vertical-align: top; padding: 4px; }
-		#navbar li.selected { font-weight: bold; background: #fff; padding-top: 8px; margin-bottom: 0px; border-radius: 0px 0px 6px 6px; }
+		#navbar li.selected { font-weight: bold; background: #fff; padding-top: 8px; margin-bottom: 0px; border-radius: 0px 0px 6px 6px; border-bottom: 2px solid black; }
 		#navbar a { color: inherit; text-decoration: none; }
 		#main { background: #eee; position: relative; top: -40px; padding: 10px; padding-top: 40px; border: 1px solid #999; }
-		span.ingredient { width: 68px; height: 68px; display: inline-block; margin: 0px; margin-right: 10px; overflow: hidden; background: url('img/background.png') 0px 0px / 100% 100%; cursor: pointer; }
+		span.ingredient { width: 68px; height: 68px; display: inline-block; margin: 0px; margin-right: 10px; overflow: hidden; cursor: pointer; }
 		.ingredientpicker { border: 1px solid #888; padding: 3px; border-radius: 4px; }
 		.ingredientpicker:hover { border: 1px solid #aaa; }
 		.ingredientdropdown { position: absolute; left: 0px; top: 0px; display: block; background: rgba(150, 150, 150, 0.7); }
