--- a/html/index.htm
+++ b/html/index.htm
@@ -5,26 +5,32 @@
 	<style type="text/css">
 		body { background: #ccc; width: 1000px; margin-left: auto; margin-right: auto; overflow: scroll; font-family: sans-serif; }
 		a { color: #333; }
+		a:hover { color: #888; }
 		#navbar { position: relative; left: 0px; top: 0px; display: block; z-index: 1; }
 		#navbar li { display: inline-block; list-style-type: none; padding-left: 0px; margin-left: 0px; border: 1px solid black; background: #ddd; cursor: pointer; margin-bottom: 8px; vertical-align: top; padding: 4px; }
 		#navbar li.selected { font-weight: bold; background: #fff; padding-top: 8px; margin-bottom: 0px; border-radius: 0px 0px 6px 6px; border-bottom: 2px solid black; }
 		#navbar a { color: inherit; text-decoration: none; }
 		#main { background: #eee; position: relative; top: -40px; padding: 10px; padding-top: 40px; border: 1px solid #999; }
 		span.ingredient { width: 68px; height: 68px; display: inline-block; margin: 0px; margin-right: 10px; overflow: hidden; cursor: pointer; }
-		.ingredientpicker { border: 1px solid #888; padding: 3px; border-radius: 4px; }
+		.ingredientpicker { border: 1px solid #888; padding: 3px; border-radius: 4px; margin-bottom: 4px; }
 		.ingredientpicker:hover { border: 1px solid #aaa; }
-		.ingredientdropdown { position: absolute; left: 0px; top: 0px; display: block; background: rgba(150, 150, 150, 0.7); }
+		.ingredientdropdown { position: absolute; left: 0px; top: 0px; display: block; background: rgba(150, 150, 150, 0.7); border-radius: 4px; }
 		.ingredientdropdown ul { margin: 0px; padding: 0px; }
-		.ingredientdropdown li { padding-left: 0px; margin: 1px; list-style-type: none; cursor: pointer; border-radius: 4px; background: #ddd; background: linear-gradient(to bottom, #eeeeee 0%,#dddddd 8%,#dddddd 60%,#cccccc 85%); background: -moz-linear-gradient(to bottom, #eeeeee 0%,#dddddd 8%,#dddddd 60%,#cccccc 85%); background: -webkit-linear-gradient(to bottom, #eeeeee 0%,#dddddd 8%,#dddddd 60%,#cccccc 85%); }
+		.ingredientdropdown li { padding-left: 0px; padding-right: 3px; margin: 1px; list-style-type: none; cursor: pointer; border-radius: 4px; background: #ddd; background: linear-gradient(to bottom, #dddddd 0%,#cccccc 2px,#cccccc 60%,#bbbbbb 85%,#888888 100%); background: -moz-linear-gradient(to bottom, #eeeeee 0%,#dddddd 8%,#dddddd 60%,#cccccc 85%); background: -webkit-linear-gradient(to bottom, #eeeeee 0%,#dddddd 8%,#dddddd 60%,#cccccc 85%); }
 		.ingredientdropdown li img { padding-left: 4px; padding-right: 4px; width: 14px; height: 14px; }
-		.ingredientdropdown li:hover { background: #eee; background: linear-gradient(to bottom, #ffffff 0%,#eeeeee 8%,#eeeeee 60%,#bbbbbb 85%); background: -mozlinear-gradient(to bottom, #ffffff 0%,#eeeeee 8%,#eeeeee 60%,#bbbbbb 85%); background: -webkit-linear-gradient(to bottom, #ffffff 0%,#eeeeee 8%,#eeeeee 60%,#bbbbbb 85%); }
-		.ingredientdropdown li.selected { list-style-type: circle; background: #eee linear-gradient(to bottom, #ffffff 0%,#eeeeee 8%,#eeeeee 60%,#bbbbbb 85%); }
+		.ingredientdropdown li:hover { background: #eee; background: linear-gradient(to bottom, #ffffff 0%,#d8d8d8 2px,#d8d8d8 60%,#c8c8c8 85%,#aaaaaa 100%); background: -mozlinear-gradient(to bottom, #ffffff 0%,#d8d8d8 2px,#d8d8d8 60%,#c8c8c8 85%,#aaaaaa 100%); background: -webkit-linear-gradient(to bottom, #ffffff 0%,#d8d8d8 2px,#d8d8d8 60%,#c8c8c8 85%,#aaaaaa 100%); }
+		.ingredientdropdown li.selected { background: #fff; background: linear-gradient(to bottom, #ffffff 0%,#d5d5d5 2px,#ffffff 60%,#dddddd 85%,#aaaaaa 100%); background: -mozlinear-gradient(to bottom, #ffffff 0%,#d5d5d5 2px,#ffffff 60%,#dddddd 85%,#aaaaaa 100%); background: -webkit-linear-gradient(to bottom, #ffffff 0%,#d5d5d5 2px,#ffffff 60%,#dddddd 85%,#aaaaaa 100%); }
+		.clearingredients { color: red; display: inline-block; padding-left: 5px; padding-right: 5px; cursor: pointer; border: 1px solid #c55; margin-left: 12pt; text-align: center; vertical-align: center; font-size: 75%; opacity: 0.4; }
+		.clearingredients:hover { opacity: 1; }
+		h2 { padding-left: 10px; color: #444; margin-bottom: 4pt; }
+		p { margin-top: 0pt; }
 		table { }
 		table td { border-left: 1px solid white; border-top: 1px solid white; border-bottom: 1px solid #aaa; border-right: 1px solid #aaa; background: #ddd; }
 		table tr { border: 1px solid black; }
 		table th { border-bottom: 2px solid black; }
-		#footer { padding-left: 10px; padding-right: 10px; color: #888; text-align: center; }
-		#footer a { color: #555; }
+		#footer { padding-left: 10px; padding-right: 10px; color: #777; text-align: center; }
+		#footer a { color: #585858; }
+		#footer a:hover { color: #777; }
 	</style>
 </head>
 <body>
@@ -40,12 +46,12 @@
 	<div id="main">
 		<div id="simulator">
 			<div style="margin-bottom: 6pt">Add ingredients to see what they make.</div>
-			<div id="ingredients"><input type="text" class="ingredientpicker" data-type="food" style="display: block; width: 25%" placeholder="Choose an ingredient"></input><span class="ingredient"></span><span class="ingredient"></span><span class="ingredient"></span><span class="ingredient"></span></div>
+			<input type="text" class="ingredientpicker" data-type="food" style="width: 25%" placeholder="Choose an ingredient"></input><div id="ingredients"><span class="ingredient"></span><span class="ingredient"></span><span class="ingredient"></span><span class="ingredient"></span></div>
 			<div id="results"></div>
 		</div>
 		<div id="discovery">
 			<div style="margin-bottom: 6pt">Add items in your inventory to see your options.</div>
-			<div id="inventory"><input type="text" class="ingredientpicker" style="display: block; width: 25%" placeholder="Choose an ingredient"></input></div>
+			<input type="text" class="ingredientpicker" style="width: 25%" placeholder="Choose an ingredient"></input><div id="inventory"></div>
 			<div id="discover"></div>
 		</div>
 		<div id="foodlist">
