Bug fix/stability improvements
Fixed empty ingredient insertion when clicking images in the item picker
On browsers supporting canvas, cache images using data URLs (fix
flickering)
Changed ingredient tiles to use images instead of multiple backgrounds
Added title text to ingredient tiles

--- a/html/index.htm
+++ b/html/index.htm
@@ -11,7 +11,8 @@
 		#navbar li.selected { font-weight: bold; background: #fff; padding-top: 8px; margin-bottom: 0px; border-radius: 0px 0px 6px 6px; border-bottom: 2px solid black; }
 		#navbar a { color: inherit; text-decoration: none; }
 		#main { background: #eee; position: relative; top: -40px; padding: 10px; padding-top: 40px; border: 1px solid #999; }
-		span.ingredient { width: 68px; height: 68px; display: inline-block; margin: 0px; margin-right: 10px; overflow: hidden; cursor: pointer; }
+		span.ingredient { width: 68px; height: 68px; display: inline-block; margin: 0px; margin-right: 10px; overflow: hidden; cursor: pointer; background: url('img/background.png') top left no-repeat; display: table-cell; vertical-align: middle; border: none; border-right: 5px solid rgba(0, 0, 0, 0); }
+		span.ingredient img { display: block; margin-left: auto; margin-right: auto; }
 		.ingredientpicker { border: 1px solid #888; padding: 3px; border-radius: 4px; margin-bottom: 4px; }
 		.ingredientpicker:hover { border: 1px solid #aaa; }
 		.ingredientdropdown { position: absolute; left: 0px; top: 0px; display: block; background: rgba(150, 150, 150, 0.7); border-radius: 4px; }
