--- a/html/index.htm
+++ b/html/index.htm
@@ -11,9 +11,9 @@
 		#navbar li.selected { font-weight: bold; background: #fff; padding-top: 8px; margin-bottom: 0px; border-radius: 0px 0px 6px 6px; border-bottom: 2px solid black; }
 		#navbar a { color: inherit; text-decoration: none; }
 		#main { background: #eee; position: relative; top: -40px; padding: 10px; padding-top: 40px; border: 1px solid #999; }
-		.ingredientlist { display: table-row; }
-		span.ingredient { width: 68px; height: 68px; display: inline-block; margin: 0px; margin-right: 10px; overflow: hidden; cursor: pointer; background: url('img/background.png') top left no-repeat; display: table-cell; vertical-align: middle; border: none; border-right: 5px solid rgba(0, 0, 0, 0); }
-		span.ingredient img { display: block; margin-left: auto; margin-right: auto; }
+		.ingredientlist {  }
+		span.ingredient { width: 68px; height: 68px; display: inline-block; margin: 0px; margin-right: 5px; overflow: hidden; cursor: pointer; background: url('img/background.png') top left no-repeat; position: relative; }
+		span.ingredient img { display: block; position: absolute; top: 50%; left: 50%; width: 64px; height: 64px; margin-left: -32px; margin-top: -32px; border: none; }
 		.ingredientpicker { border: 1px solid #888; padding: 3px; border-radius: 4px; margin-bottom: 4px; }
 		.ingredientpicker:hover { border: 1px solid #aaa; }
 		.ingredientdropdown { position: absolute; left: 0px; top: 0px; display: block; background: rgba(150, 150, 150, 0.7); border-radius: 4px; }
