--- a/html/index.htm
+++ b/html/index.htm
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Don't Starve Food Guide</title>
+	<link rel="shortcut icon" href="icon.png" />
+	<meta charset='utf-8' />
 	<style type="text/css">
 		body { background: #ccc; width: 1000px; margin-left: auto; margin-right: auto; overflow: scroll; font-family: sans-serif; }
 		a { color: #333; }
@@ -16,20 +18,25 @@
 		span.ingredient img { display: block; position: absolute; top: 50%; left: 50%; width: 64px; height: 64px; margin-left: -32px; margin-top: -32px; border: none; }
 		.ingredientpicker { border: 1px solid #888; padding: 3px; border-radius: 4px; margin-bottom: 4px; }
 		.ingredientpicker:hover { border: 1px solid #aaa; }
-		.ingredientdropdown { position: absolute; left: 0px; top: 0px; display: block; background: rgba(150, 150, 150, 0.7); border-radius: 4px; }
+		.ingredientdropdown { position: absolute; left: 0px; top: 0px; display: block; background: #bbb; border-radius: 4px; z-index: 1; }
 		.ingredientdropdown ul { margin: 0px; padding: 0px; }
-		.ingredientdropdown li { padding-left: 0px; padding-right: 3px; margin: 1px; list-style-type: none; cursor: pointer; border-radius: 4px; background: #ddd; background: linear-gradient(to bottom, #dddddd 0%,#cccccc 2px,#cccccc 60%,#bbbbbb 85%,#888888 100%); background: -moz-linear-gradient(to bottom, #eeeeee 0%,#dddddd 8%,#dddddd 60%,#cccccc 85%); background: -webkit-linear-gradient(to bottom, #eeeeee 0%,#dddddd 8%,#dddddd 60%,#cccccc 85%); }
+		.ingredientdropdown li { padding-left: 0px; padding-right: 3px; margin: 1px; list-style-type: none; cursor: pointer; border-radius: 4px; background: #ddd; background: linear-gradient(to bottom, #dddddd 0%,#cccccc 2px,#cccccc 60%,#bbbbbb 85%,#888888 100%); background: -moz-linear-gradient(to bottom, #eeeeee 0%,#dddddd 8%,#dddddd 60%,#cccccc 85%); background: -webkit-linear-gradient(to bottom, #eeeeee 0%,#dddddd 8%,#dddddd 60%,#cccccc 85%); background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #eeeeee),color-stop(8%, #dddddd),color-stop(60%, #dddddd),color-stop(85%, #cccccc)); }
 		.ingredientdropdown li img { padding-left: 4px; padding-right: 4px; width: 14px; height: 14px; }
-		.ingredientdropdown li:hover { background: #eee; background: linear-gradient(to bottom, #ffffff 0%,#d8d8d8 2px,#d8d8d8 60%,#c8c8c8 85%,#aaaaaa 100%); background: -mozlinear-gradient(to bottom, #ffffff 0%,#d8d8d8 2px,#d8d8d8 60%,#c8c8c8 85%,#aaaaaa 100%); background: -webkit-linear-gradient(to bottom, #ffffff 0%,#d8d8d8 2px,#d8d8d8 60%,#c8c8c8 85%,#aaaaaa 100%); }
-		.ingredientdropdown li.selected { background: #fff; background: linear-gradient(to bottom, #ffffff 0%,#d5d5d5 2px,#ffffff 60%,#dddddd 85%,#aaaaaa 100%); background: -mozlinear-gradient(to bottom, #ffffff 0%,#d5d5d5 2px,#ffffff 60%,#dddddd 85%,#aaaaaa 100%); background: -webkit-linear-gradient(to bottom, #ffffff 0%,#d5d5d5 2px,#ffffff 60%,#dddddd 85%,#aaaaaa 100%); }
+		.ingredientdropdown li:hover { background: #eee; background: linear-gradient(to bottom, #ffffff 0%,#d8d8d8 2px,#d8d8d8 60%,#c8c8c8 85%,#aaaaaa 100%); background: -moz-linear-gradient(to bottom, #ffffff 0%,#d8d8d8 2px,#d8d8d8 60%,#c8c8c8 85%,#aaaaaa 100%); background: -webkit-linear-gradient(to bottom, #ffffff 0%,#d8d8d8 2px,#d8d8d8 60%,#c8c8c8 85%,#aaaaaa 100%); background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff),color-stop(2px, #d8d8d8),color-stop(60%, #d8d8d8),color-stop(85%, #c8c8c8),color-stop(100%, #aaaaaa)); }
+		.ingredientdropdown li.selected { background: #fff; background: linear-gradient(to bottom, #ffffff 0%,#d5d5d5 2px,#ffffff 60%,#dddddd 85%,#aaaaaa 100%); background: -moz-linear-gradient(to bottom, #ffffff 0%,#d5d5d5 2px,#ffffff 60%,#dddddd 85%,#aaaaaa 100%); background: -webkit-linear-gradient(to bottom, #ffffff 0%,#d5d5d5 2px,#ffffff 60%,#dddddd 85%,#aaaaaa 100%); background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff),color-stop(2px, #d5d5d5),color-stop(60%, #ffffff),color-stop(85%, #dddddd),color-stop(100%, #aaaaaa)); }
 		.clearingredients { color: red; display: inline-block; padding-left: 5px; padding-right: 5px; cursor: pointer; border: 1px solid #c55; margin-left: 12pt; text-align: center; vertical-align: center; font-size: 75%; opacity: 0.4; }
 		.clearingredients:hover { opacity: 1; }
 		h2 { padding-left: 10px; color: #444; margin-bottom: 4pt; }
 		p { margin-top: 0pt; }
 		table { }
-		table td { border-left: 1px solid white; border-top: 1px solid white; border-bottom: 1px solid #aaa; border-right: 1px solid #aaa; background: #ddd; }
+		table td { border-left: 1px solid white; border-top: 1px solid white; border-bottom: 1px solid #aaa; border-right: 1px solid #aaa; background: #ddd; padding-left: 3px; padding-right: 3px; }
+		td img { width: 32px; height: 32px; }
 		table tr { border: 1px solid black; }
+		table tr.highlighted td { background: #ffb; border-bottom: 1px solid #cc3; border-right: 1px solid #cc3; }
 		table th { border-bottom: 2px solid black; }
+		table.links span.link { padding-left: 2px; padding-right: 2px; padding-bottom: 1px; padding-top: 1px; display: inline-block; border: 1px solid #999; background: #ccc; background: linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%); background: -webkit-linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%); background: -moz-linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%); background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,rgba(170,170,170,1)), color-stop(50%,rgba(170,170,170,0))); border-radius: 3px; cursor: pointer; }
+		table.links span.link:hover { opacity: 0.8; }
+		span.link img { width: 16pt; height: 16pt; vertical-align: text-bottom; }
 		#footer { padding-left: 10px; padding-right: 10px; color: #777; text-align: center; }
 		#footer a { color: #585858; }
 		#footer a:hover { color: #777; }
@@ -48,12 +55,12 @@
 	<div id="main">
 		<div id="simulator">
 			<div style="margin-bottom: 6pt">Add ingredients to see what they make.</div>
-			<input type="text" class="ingredientpicker" data-type="food" style="width: 25%" placeholder="Choose an ingredient"></input><div id="ingredients" class="ingredientlist"><span class="ingredient"></span><span class="ingredient"></span><span class="ingredient"></span><span class="ingredient"></span></div>
+			<input type="text" class="ingredientpicker" data-type="food" style="width: 25%" placeholder="Choose an ingredient" /><div id="ingredients" class="ingredientlist"><span class="ingredient"></span><span class="ingredient"></span><span class="ingredient"></span><span class="ingredient"></span></div>
 			<div id="results"></div>
 		</div>
 		<div id="discovery">
 			<div style="margin-bottom: 6pt">Add items in your inventory to see your options.</div>
-			<input type="text" class="ingredientpicker" style="width: 25%" placeholder="Choose an ingredient"></input><div id="inventory" class="ingredientlist"></div>
+			<input type="text" class="ingredientpicker" style="width: 25%" placeholder="Choose an ingredient" /><div id="inventory" class="ingredientlist"></div>
 			<div id="discover"></div>
 		</div>
 		<div id="foodlist">
@@ -65,14 +72,14 @@
 		<div id="help">
 			<h2>About This Food Guide</h2>
 			<p>
-				This is a tool to aid in not starving in <a href="http://www.dontstarvegame.com/">Don't Starve</a>,
+				This is an unofficial tool to help avoid starvation in <a href="http://www.dontstarvegame.com/">Don't Starve</a>,
 				an uncompromising wilderness survival game full of science and magic,
 				by <a href="http://kleientertainment.com/">Klei Entertainment</a>,
 				available on the <a href="https://chrome.google.com/webstore/detail/dont-starve/hiledapehlkhdehbhppgmekfalnlfajc">Chrome Web Store</a>
 				and <a href="http://store.steampowered.com/app/219740/">Steam</a>.
 			</p>
 			<p>The food and recipe database should be current as of the January 29th update.</p>
-			<h2>General</h2>
+			<h2>About Don't Starve Food</h2>
 			<p>
 				Perish time is the time before a food item becomes Rot. Halfway through this period, it will go stale, and give 50% health and 75% hunger.
 				Food spoils at three quarters of the way to Rot, giving only 50% hunger and no longer giving any health.
@@ -92,7 +99,7 @@
 		</div>
 	</div>
 	<div id="footer">
-		<a href="http://www.dontstarvegame.com/">Don't Starve</a> &copy; <a href="http://kleientertainment.com/">Klei Entertainment</a>. Food guide source code made available under the <a href="http://opensource.org/licenses/MIT">MIT License</a>.
+		<a href="http://www.dontstarvegame.com/">Don't Starve</a> &copy; <a href="http://kleientertainment.com/">Klei Entertainment</a>. Unofficial food guide <a href="foodguide_source.js">source code</a> made available under the <a href="http://opensource.org/licenses/MIT">MIT License</a>.
 	</div>
 	<script type="text/javascript" src="foodguide.js"></script>
 </body>
