Updated help section to show current version status

--- a/html/index.htm
+++ b/html/index.htm
@@ -78,7 +78,7 @@
 				available on the <a href="https://chrome.google.com/webstore/detail/dont-starve/hiledapehlkhdehbhppgmekfalnlfajc">Chrome Web Store</a>
 				and <a href="http://store.steampowered.com/app/219740/">Steam</a>.
 			</p>
-			<p>The food and recipe database should be current as of the January 29th update.</p>
+			<p>The food and recipe database should be current as of the Insanity update, February 12th.</p>
 			<h2>About Don't Starve Food</h2>
 			<p>
 				Perish time is the time before a food item becomes Rot. Halfway through this period, it will go stale, and give 50% health and 75% hunger.
