Fixed typo in new recipes, updated sanity values to current build

--- a/html/index.htm
+++ b/html/index.htm
@@ -80,11 +80,12 @@
 				and <a href="http://store.steampowered.com/app/219740/">Steam</a>.
 			</p>
 			<p>This tool requires a modern web browser and is officially supported in recent versions of: Chrome/Chromium (and mobile), Firefox, Safari (and mobile), and Internet Explorer 9+</p>
-			<p>The food and recipe database should be current as of the Insanity update, February 12th.</p>
+			<p>The food and recipe database should be current as of the Insanity update, February 13th.</p>
 			<h2>About Don't Starve Food</h2>
 			<p>
 				Perish time is the time before a food item becomes Rot. Halfway through this period, it will go stale, and give 50% health and 75% hunger.
 				Food spoils at three quarters of the way to Rot, giving only 50% hunger and no longer giving any health.
+				Eating spoiled food will decrease sanity by <span id="spoiledsanity"></span>.
 			</p>
 			<p>Recipe priority determines which recipe a food combination will make; only the highest-priority possible recipes can be produced by a batch of ingredients.</p>
 			<p>In recipe requirements, cooked/uncooked usually doesn't make a difference. If it does, then only the valid form will be listed.</p>
