--- a/html/index.htm
+++ b/html/index.htm
@@ -80,7 +80,7 @@
 				and <a href="http://store.steampowered.com/app/219740/">Steam</a>.
 			</p>
 			<p>This tool requires a modern web browser and is officially supported in recent versions of: Chrome/Chromium (and mobile), Firefox, Safari (and mobile), and Internet Explorer 9+</p>
-			<p>The food and recipe database should be current as of the Winter update, February 26th.</p>
+			<p>The food and recipe database should be current as of the Rain update, March 12th.</p>
 			<h2>About Don't Starve Food</h2>
 			<p>
 				Perish time is the time before a food item becomes Rot. Halfway through this period, it will go stale, and give 50% health and 75% hunger.
