Added Statistics tab
Automatically uses all "ideal" ingredients, may add more features later

--- a/html/index.htm
+++ b/html/index.htm
@@ -56,6 +56,7 @@
 		<li data-tab="discovery">Discovery</li>
 		<li data-tab="foodlist">Food List</li>
 		<li data-tab="crockpot">Recipe List</li>
+		<li data-tab="statistics">Statistics Analyzer</li>
 		<li data-tab="help">Help</li>
 		<li><a href="http://dont-starve-game.wikia.com/" target="_blank">Wikia</a></li>
 		<li><a href="http://www.dontstarvegame.com/" target="_blank">Don't Starve</a></li>
@@ -81,6 +82,8 @@
 		</div>
 		<div id="crockpot">
 			<div id="recipes"></div>
+		</div>
+		<div id="statistics">
 		</div>
 		<div id="help">
 			<h2>About This Food Guide</h2>
