--- a/html/index.htm
+++ b/html/index.htm
@@ -30,7 +30,7 @@
 		.clearingredients:hover { opacity: 1; }
 		h2 { padding-left: 10px; color: #444; margin-bottom: 4pt; }
 		p { margin-top: 0pt; }
-		table { }
+		table { width: 100%; }
 		table td { border-left: 1px solid white; border-top: 1px solid white; border-bottom: 1px solid #aaa; border-right: 1px solid #aaa; background: #ddd; padding-left: 3px; padding-right: 3px; }
 		td img { width: 32px; height: 32px; }
 		table tr { border: 1px solid black; }
