Added issue tracker link to Help tab
Removed some testing code, tightened analyzer computation loop

--- a/html/index.htm
+++ b/html/index.htm
@@ -123,6 +123,7 @@
 			</p>
 			<h2>Links</h2>
 			<p><a href="https://code.google.com/p/dont-starve-food/source/list" target="_blank">Food Guide Change Log</a>
+			<p><a href="https://code.google.com/p/dont-starve-food/issues/list" target="_blank">Report Food Guide Bugs or Issues</a>
 			<p><a href="http://www.dontstarvegame.com/" target="_blank">Don't Starve Official Website</a>
 			<p><a href="http://dont-starve-game.wikia.com/" target="_blank">Don't Starve on Wikia</a>
 			<p><a href="http://dontstarvewiki.net/" target="_blank">Don't Starve Wiki (mostly abandoned)</a>
